force-app/main/default/objects/Fund__c/Fund__c.object-meta.xml
<CustomObject>
    <description>Funds are used to group individual investments to an overall fund. In reports and dashboards Funds are used as an important filter to look at a portfolio per fund.</description>
    <label>Fund</label>
    <nameField>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>