force-app/main/default/objects/Fund__c/fields/Fees_Due__c.field-meta.xml
<CustomField>
    <fullName>Fees_Due__c</fullName>
    <label>Fees Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>