force-app/main/default/objects/Fund__c/fields/Fees_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Fees_Remaining__c</fullName>
    <label>Fees Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>