force-app/main/default/objects/Fund__c/fields/Fund_Balance__c.field-meta.xml
<CustomField>
    <fullName>Fund_Balance__c</fullName>
    <label>Fund Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>