force-app/main/default/objects/Fund__c/fields/Fund_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Closing_Date__c</fullName>
    <label>Fund Closing Date</label>
    <type>Date</type>
</CustomField>