force-app/main/default/objects/Fund__c/fields/Fund_Manager__c.field-meta.xml
<CustomField>
    <fullName>Fund_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Loan_Funds</relationshipName>
    <type>Lookup</type>
</CustomField>