force-app/main/default/objects/Fund__c/fields/Fund_Size__c.field-meta.xml
<CustomField>
    <fullName>Fund_Size__c</fullName>
    <label>Fund Size</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>