force-app/main/default/objects/Fund__c/fields/Fund_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Start_Date__c</fullName>
    <label>Fund Start Date</label>
    <type>Date</type>
</CustomField>