force-app/main/default/objects/Fund__c/fields/Interest_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Interest_Bonus__c</fullName>
    <label>Interest Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>