force-app/main/default/objects/Fund__c/fields/Interest_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Interest_Remaining__c</fullName>
    <label>Interest Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>