force-app/main/default/objects/Fund__c/fields/Interest_Repaid__c.field-meta.xml
<CustomField>
    <fullName>Interest_Repaid__c</fullName>
    <label>Interest Repaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>