force-app/main/default/objects/Fund__c/fields/Investment_Principal_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Investment_Principal_Disbursed__c</fullName>
    <description>The total principal amount disbursed to investees from this fund</description>
    <label>Investment Principal Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>