force-app/main/default/objects/Fund__c/fields/Late_Repayment_Fees_Expected__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fees_Expected__c</fullName>
    <label>Late Repayment Fees Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>