force-app/main/default/objects/Fund__c/fields/Late_Repayment_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fees_Paid__c</fullName>
    <label>Late Repayment Fees Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>