force-app/main/default/objects/Fund__c/fields/Late_Repayment_Fees_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fees_Remaining__c</fullName>
    <label>Late Repayment Fees Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>