force-app/main/default/objects/Fund__c/fields/Penalties_Paid__c.field-meta.xml
<CustomField>
    <fullName>Penalties_Paid__c</fullName>
    <label>Penalties Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>