force-app/main/default/objects/Fund__c/fields/Principal_Written_Off__c.field-meta.xml
<CustomField>
    <fullName>Principal_Written_Off__c</fullName>
    <label>Principal Written Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>