force-app/main/default/objects/Fund__c/fields/Setup_Fee_Expected__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Expected__c</fullName>
    <label>Setup Fee Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>