force-app/main/default/objects/Fund__c/fields/Total_Draw_Down__c.field-meta.xml
<CustomField>
    <fullName>Total_Draw_Down__c</fullName>
    <label>Total Draw Down</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>