force-app/main/default/objects/Fund__c/fields/Total_Expected__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected__c</fullName>
    <label>Total Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>