force-app/main/default/objects/Fund__c/fields/Total_Fund_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Total_Fund_Repayments__c</fullName>
    <description>Total amount of funds repaid back to the investor</description>
    <label>Total Fund Repayments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>