force-app/main/default/objects/Fund__c/fields/Total_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Total_Overdue__c</fullName>
    <formula>Fees_Overdue__c + Interest_Overdue__c + Late_Repayment_Fees_Overdue__c + Principal_Overdue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>