force-app/main/default/objects/Fund__c/fields/Total_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining__c</fullName>
    <formula>Fees_Remaining__c + Interest_Remaining__c + Late_Repayment_Fees_Remaining__c + Principal_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>