force-app/main/default/objects/Fund__c/listViews/All_Funds.listView-meta.xml
<ListView>
    <fullName>All_Funds</fullName>
    <columns>NAME</columns>
    <columns>Fund_Size__c</columns>
    <columns>Fund_Manager__c</columns>
    <columns>Fund_Start_Date__c</columns>
    <columns>Fund_Closing_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Funds</label>
</ListView>